# theyard-browser

./: .gitignore  YARD-STATUS.md
.forgejo/workflows/: build.yml
.github/workflows/: build.yml
identity/: Cargo.toml
identity/yard-identity/: Cargo.toml  README.md
identity/yard-identity/src/: crypto.rs  error.rs  keys.rs  lib.rs  profile.rs  storage.rs
identity/yardd/: Cargo.toml  README.md
identity/yardd/src/: main.rs  peercred.rs  protocol.rs  session.rs
l10n/: l10n
patches/: yard-protocol-handler.patch  yard-protocol-registration.patch
scripts/: librewolf-patches.py
