[package]
name = "yard-identity"
version = "0.1.0"
edition = "2021"
description = "Ed25519 identity, encrypted local profile storage, and signing for The Yard network"
license = "MIT"

[dependencies]
ed25519-dalek = { version = "=2.1.1", features = ["rand_core", "zeroize"] }
sha2 = "0.10"
argon2 = "0.5"
chacha20poly1305 = "0.10"
rand = "0.8"
rand_core = { version = "0.6", features = ["std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
zeroize = "=1.6.0"
base64ct = "=1.6.0"

[dev-dependencies]
tempfile = "=3.10.1"

[lib]
name = "yard_identity"
path = "src/lib.rs"
